# Workflow-Chat

./: .env.example  .gitignore  README.md  setup.ps1  setup.sh  start.ps1  start.sh
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: agents.py  operator.py  playbooks.py  settings.py  telegram.py  tools.py
apps/api/app/core/: config.py
apps/api/app/schemas/: agent.py  agent_tools.py  memory.py  operator.py  playbooks.py  settings.py  skills.py  tools.py
apps/api/app/services/: agent_memory.py  agent_registry.py  agent_skills.py  agent_tools.py  boss_settings.py  codex_tools.py  default_agents.py  dify_tools.py  mcp_tools.py  memory_settings.py  message_formatter.py  model_settings.py  notification_settings.py  notifications.py  operator_publish.py  playbook_scheduler.py  playbooks.py  prompt_config.py  run_monitor.py  tool_registry.py  weixin_cli.py  weixin_send_text.mjs  workflow_clients.py
apps/api/app/services/time_parser/: __init__.py  constants.py  llm.py  prompts.py  rules.py  schemas.py  validators.py
apps/api/app/services/time_parser/prompts/: examples.json  system.md  user.md
apps/web/: package-lock.json  package.json
apps/worker/: pyproject.toml
docs/: MVP-plan.md  develop-logs.md  operator-publish-control.md  orchestration-few-shot-examples.md  orchestration-output-schema.md  orchestration-semantic-dictionary.md  setup-installer.md  v0.1-development-start.md
integrations/filesystem/: README.md
integrations/github/: README.md
scripts/: bootstrap.ps1  bootstrap.sh  dev.ps1  migrate.ps1  setup.py
(+58 files in other folders)
