[project]
name = "workflow-chat-api"
version = "0.1.0"
description = "FastAPI backend for Workflow Chat Digital Employee OS."
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
